# backend/routes/index.ts
@@ -2,7 +2,7 @@ export { router as tagsRouter          } from "./tags"
 export { router as groupsRouter        } from "./groups"
 export { router as permissionsRouter   } from "./permissions"
 export { router as usersRouter         } from "./users"
-export { router as studyAreasRouter    } from "./projects"
+export { router as studyAreasRouter    } from "./StudyAreas"
 export { router as userGroupsRouter    } from "./userGroups"
 export { router as viewsRouter         } from "./views"
 export { router as subscriptionsRouter } from "./DataRequest"
